# Prone_contron

./: .gitignore  README.md  README_drone_ground_station.md  diagnose_wifi_protocol.py  drone_ground_station.py
qt_ground_station/: CMakeLists.txt  DESIGN_中文.md  QtDroneStation.pro  README_中文.md
qt_ground_station/python_qt6/: DroneGroundStation.spec  README_中文.md  qt_drone_station.py  run_qt6_ground_station.ps1
qt_ground_station/src/: main.cpp  mainwindow.cpp  mainwindow.h  serialcleanflightclient.cpp  serialcleanflightclient.h  wifiufoclient.cpp  wifiufoclient.h
